@@ -1,3 +1,4 @@
+* Check pending commission to erase party
 * Match also with parent categories
 
 Version 4.6.0 - 2017-10-30
